--- a/tournaments/bestface.css
+++ b/tournaments/bestface.css
@@ -156,6 +156,17 @@ body {
 	right: 5px;
 }
 
+ul li a {
+    display:inline-block;
+    width:100%;
+    text-decoration:none;
+    color: black;
+}
+
+a:visited{
+    color:black;
+  }
+
 .team {
 	padding: 0 5px;
 	margin: 3px 0;
@@ -205,8 +216,7 @@ body {
 }
 
 .current li.team {
-	background-color: #fff;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+	background-color: rgb(240, 239, 239);
 	opacity: 1;
 }
 
