--- a/tournaments/latenightlegs.css
+++ b/tournaments/latenightlegs.css
@@ -265,12 +265,152 @@ a:visited{
 	margin: 4.5em 0;
 }
 
+@-webkit-keyframes pulse {
+	0% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	50% {
+		-webkit-transform: scale(1.3);
+		transform: scale(1.3);
+	}
+	100% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
+@keyframes pulse {
+	0% {
+		-webkit-transform: scale(1);
+		-ms-transform: scale(1);
+		transform: scale(1);
+	}
+	50% {
+		-webkit-transform: scale(1.3);
+		-ms-transform: scale(1.3);
+		transform: scale(1.3);
+	}
+	100% {
+		-webkit-transform: scale(1);
+		-ms-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
+.share-icon {
+	color: #fff;
+	opacity: 0.35;
+}
+
+.share-icon:hover {
+	opacity: 1;
+	-webkit-animation: pulse 0.5s;
+	animation: pulse 0.5s;
+}
+
+.date {
+	font-size: 10px;
+	letter-spacing: 2px;
+	font-family: 'Istok Web', sans-serif;
+	color: #3F915F;
+}
+
+@media screen and (min-width: 981px) and (max-width: 1099px) {
+	.container {
+		margin: 0 1%;
+	}
+	.champion {
+		width: 14%;
+	}
+	.split {
+		width: 43%;
+	}
+	.split-one .vote-box {
+		margin-left: 138px;
+	}
+	.hero p.intro {
+		font-size: 28px;
+	}
+	.hero p.year {
+		margin: 5px 0 10px;
+	}
+}
+
+@media screen and (max-width: 980px) {
+	.container {
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		flex-direction: column;
+	}
+	.split,
+	.champion {
+		width: 90%;
+		margin: 35px 5%;
+	}
+	.champion {
+		-webkit-box-ordinal-group: 3;
+		-moz-box-ordinal-group: 3;
+		-ms-flex-order: 3;
+		-webkit-order: 3;
+		order: 3;
+	}
+	.split {
+		border-bottom: 1px solid #b6b6b6;
+		padding-bottom: 20px;
+	}
+	.hero p.intro {
+		font-size: 24px;
+	}
+	.hero h1 {
+		font-size: 3em;
+		margin: 15px 0;
+	}
+	.hero p {
+		font-size: 1em;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.split {
+		width: 95%;
+		margin: 25px 2.5%;
+	}
+	.round {
+		width: 21%;
+	}
+	.current {
+		-webkit-flex-grow: 1;
+		-moz-flex-grow: 1;
+		flex-grow: 1;
+	}
+	.hero h1 {
+		font-size: 2.15em;
+		letter-spacing: 0;
+		margin: 0;
+	}
+	.hero p.intro {
+		font-size: 1.15em;
+		margin-bottom: -10px;
+	}
+	.round-details {
+		font-size: 90%;
+	}
+	.hero-wrap {
+		padding: 2.5em;
+	}
+	.hero p.year {
+		margin: 5px 0 10px;
+		font-size: 18px;
+	}
+}
+
 #animatedBackground {
 	width: 100%;
 	height: 300px;
 	background: url("capture.jpg");
 	background-size: auto 300px;
-	animation: animatedBackground 100s linear infinite;
+	animation: animatedBackground 300s linear infinite;
   }
   
   @keyframes animatedBackground {
