--- a/tournaments/latenightlegs.css
+++ b/tournaments/latenightlegs.css
@@ -408,7 +408,7 @@ a:visited{
 #animatedBackground {
 	width: 100%;
 	height: 300px;
-	background: url("capture.jpg");
+	background: url("https://i.imgur.com/DfdpVxh.jpg");
 	background-size: auto 300px;
 	animation: animatedBackground 500s linear infinite;
   }
