--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Istok Web', sans-serif !important;
-	background-color:#1a1a1a !important;
+	background-color:#000 !important;
 	background-size: cover !important;
 	min-height: 100% !important;
 	margin: 0 !important;
