--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -12,7 +12,7 @@ body {
 	overflow: hidden !important;
 	color: #fcfcfc !important;
 	border-bottom: 4px outset #d2e0e6;
-	background-color: #002c56;
+	background-color: #003066;
 }
 
 P { text-align: center }
