--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -21,10 +21,10 @@ P { text-align: center }
 	font-family: 'Holtwood One SC', serif !important;
 	font-weight: normal !important;
 	font-size: 3.4em !important;
-	margin: 0 0 20px !important;
 	text-shadow: 0 0 12px rgba(0, 0, 0, 0.5) !important;
 	text-transform: uppercase !important;
 	letter-spacing: -1px !important;
+	margin-bottom: -8px;
 }
 
 .hero p {
@@ -71,7 +71,17 @@ P { text-align: center }
 	flex-direction: row !important;
 }
 
+.round-title {
+	color: #ff2f2f;
+	font-size: 2em;
+	font-family: 'Holtwood One SC', serif;
+}
 
+.cb-logo {
+	width:75px;
+	height:85px;
+	padding-bottom:10px
+}
 
 /* Slideshow */
 * {box-sizing: border-box}
@@ -198,22 +208,54 @@ table {
 
 @media screen and (min-width: 981px) and (max-width: 1099px) {
 	.container {
-		margin: 0 1% !important;
+		-webkit-flex-direction: column !important;
+		-moz-flex-direction: column !important;
+		flex-direction: column !important;
+	}
+	.split,
+	.champion {
+		width: 90% !important;
+		margin: 35px 5% !important;
 	}
 	.champion {
-		width: 14% !important;
+		-webkit-box-ordinal-group: 3 !important;
+		-moz-box-ordinal-group: 3 !important;
+		-ms-flex-order: 3 !important;
+		-webkit-order: 3 !important;
+		order: 3 !important;
 	}
 	.split {
-		width: 43% !important;
-	}
-	.split-one .vote-box {
-		margin-left: 138px !important;
+		border-bottom: 1px solid #b6b6b6 !important;
+		padding-bottom: 20px !important;
 	}
 	.hero p.intro {
-		font-size: 42px !important;
+		font-size: 4em !important;
 	}
+	.hero h1 {
+		font-size: 3.7em !important;
+		margin: 15px 0 -4px !important;
+	}
+	.hero p {
+		font-size: 1em !important;
+	}
+
 	.hero p.year {
-		margin: 5px 0 10px !important;
+		color: #fff !important;
+		letter-spacing: 20px !important;
+		font-size: 2.2em !important;
+		margin: -26px 0 -6px !important;
+	}
+
+	.round-title {
+		color: #ff2f2f;
+		font-size: 2em;
+		font-family: 'Holtwood One SC', serif;
+	}
+
+	.cb-logo {
+		width:110px;
+		height:120px;
+		padding-bottom:10px
 	}
 }
 
@@ -241,11 +283,11 @@ table {
 		padding-bottom: 20px !important;
 	}
 	.hero p.intro {
-		font-size: 25px !important;
+		font-size: 2.3em !important;
 	}
 	.hero h1 {
-		font-size: 2em !important;
-		margin: 15px 0 28px !important;
+		font-size: 2.5em !important;
+		margin: 15px -4px !important;
 	}
 	.hero p {
 		font-size: 1em !important;
@@ -254,8 +296,14 @@ table {
 	.hero p.year {
 		color: #fff !important;
 		letter-spacing: 20px !important;
-		font-size: 1.2em !important;
+		font-size: 2em !important;
 		margin: -26px 0 -6px !important;
+	}
+
+	.round-title {
+		color: #ff2f2f;
+		font-size: 1.6em;
+		font-family: 'Holtwood One SC', serif;
 	}
 }
 
@@ -278,8 +326,8 @@ table {
 		margin: 0 !important;
 	}
 	.hero p.intro {
-		font-size: 2em !important;
-		margin-bottom: -10px !important;
+		font-size: 1.5em !important;
+		margin-bottom: -4px !important;
 	}
 	.round-details {
 		font-size: 90% !important;
@@ -305,4 +353,16 @@ table {
 		display: inline-block;
 		transition: background-color 0.6s ease;
 	  }
+	
+	.round-title {
+		color: #ff2f2f;
+		font-size: 1.4em;
+		font-family: 'Holtwood One SC', serif;
+	}
+
+	.cb-logo {
+		width:60px;
+		height:70px;
+		padding-bottom:10px
+	}
 }
