--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -77,10 +77,191 @@ P { text-align: center }
 	font-family: 'Holtwood One SC', serif;
 }
 
+.table-title {
+	color: #ff2f2f;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 16px;
+	text-transform: uppercase;
+	text-align: center;
+	height: 30px;
+	margin-bottom: 6px;
+}
+
 .cb-logo {
 	width:90px;
 	height:100px;
 	padding-bottom:10px
+}
+
+/* Bracket */
+#bracket {
+	overflow: hidden;
+	background-color: #e1e1e1;
+	background-color: rgb(26, 26, 26);
+	padding-top: 20px;
+	font-size: 12px;
+	padding: 40px 0;
+}
+
+.split {
+	display: block;
+	float: left;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	width: 42%;
+	-webkit-flex-direction: row;
+	-moz-flex-direction: row;
+	flex-direction: row;
+}
+
+.champion {
+	float: left;
+	display: block;
+	width: 16%;
+	-webkit-flex-direction: row;
+	flex-direction: row;
+	-webkit-align-self: center;
+	align-self: center;
+	text-align: center;
+	padding: 230px 0\9;
+}
+
+.champion i {
+	color: #a0a6a8;
+	font-size: 45px;
+	padding: 10px 0;
+}
+
+.round {
+	display: block;
+	float: left;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	flex-direction: column;
+	width: 95%;
+	width: 30.8333%\9;
+}
+
+.matchup {
+	margin: 0;
+	width: 100%;
+	padding: 5px 0;
+	height: 85px;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+}
+
+ul li a {
+    display:inline-block;
+    width:100%;
+    text-decoration:none;
+    color: black;
+}
+
+a:visited{
+    color:black;
+  }
+
+.team {
+	padding: 0 5px;
+	margin: 3px 0;
+	height: 25px;
+	line-height: 25px;
+	white-space: nowrap;
+	overflow: hidden;
+	position: relative;
+}
+
+.loser {
+	padding: 0 5px;
+	margin: 3px 0;
+	height: 25px;
+	line-height: 25px;
+	white-space: nowrap;
+	overflow: hidden;
+	position: relative;
+	border-radius: 5px;
+}
+
+.quarterfinals .matchup {
+	margin: 0;
+	height: 0px;
+	padding: 110px 110px;
+}
+
+.round-details {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 16px;
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+	height: 30px;
+}
+
+.name-details {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 13px;
+	color: #2C7399;
+	text-align: center;
+}
+
+.champion li,
+.round li {
+	background-color: #fff;
+	box-shadow: none;
+	opacity: 0.45;
+}
+
+.current li {
+	opacity: 1;
+}
+
+.current li.team {
+	background-color: rgb(240, 239, 239);
+	opacity: 1;
+	border-radius: 5px;
+}
+
+.current li.loser {
+	background-color: rgb(240, 239, 239);
+	opacity: 1;
+}
+
+.current li.loser a {
+	color: rgb(126, 126, 126);
+}
+
+.vote-options {
+	display: block;
+	height: 52px;
+}
+
+.share .container {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.share-icon {
+	font-size: 24px;
+	color: #fff;
+	padding: 25px;
+}
+
+.share-wrap {
+	max-width: 1100px;
+	text-align: center;
+	margin: 60px auto;
+}
+
+.final {
+	margin: 4.5em 0;
 }
 
 /* Slideshow */
@@ -257,6 +438,21 @@ table {
 		height:120px;
 		padding-bottom:10px
 	}
+
+	/* Bracket */
+	.quarterfinals .matchup {
+		padding: 81px 0px;
+    	margin-top: -75px;
+	}
+
+	.final {
+		margin: 0em 0;
+	}
+
+	.round-details{
+		margin-bottom: 20px;
+    	font-size: 20px;
+	}
 }
 
 
@@ -305,21 +501,23 @@ table {
 		font-size: 1.6em;
 		font-family: 'Holtwood One SC', serif;
 	}
+
+	/* Bracket */
+	.quarterfinals .matchup {
+		padding: 81px 0px;
+    	margin-top: -75px;
+	}
+
+	.final {
+		margin: 0em 0;
+	}
+
+	.round-details{
+    	font-size: 18px;
+	}
 }
 
 @media screen and (max-width: 400px) {
-	.split {
-		width: 95% !important;
-		margin: 25px 2.5% !important;
-	}
-	.round {
-		width: 21% !important;
-	}
-	.current {
-		-webkit-flex-grow: 1 !important;
-		-moz-flex-grow: 1 !important;
-		flex-grow: 1 !important;
-	}
 	.hero h1 {
 		font-size: 1.5em !important;
 		letter-spacing: 0 !important;
@@ -328,12 +526,6 @@ table {
 	.hero p.intro {
 		font-size: 1.5em !important;
 		margin-bottom: -4px !important;
-	}
-	.round-details {
-		font-size: 90% !important;
-	}
-	.group-details {
-		font-size: 90% !important;
 	}
 	.hero-wrap {
 		padding: 0em !important;
@@ -364,5 +556,20 @@ table {
 		width:60px;
 		height:70px;
 		padding-bottom:10px
+	}
+
+	/* Bracket */
+	.quarterfinals .matchup {
+		padding: 81px 0px;
+    	margin-top: -75px;
+	}
+
+	.final {
+		margin: 0em 0;
+	}
+
+	.round-details{
+		font-size: 16px;
+		margin-bottom: 0px;
 	}
 }
