--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -18,7 +18,7 @@ body {
 P { text-align: center }
 
 .hero h1 {
-	font-family: 'Holtwood One SC', serif !important;
+	font-family: 'Secular One', sans-serif !important;
 	font-weight: normal !important;
 	font-size: 3.4em !important;
 	text-shadow: 0 0 12px rgba(0, 0, 0, 0.5) !important;
@@ -37,7 +37,7 @@ P { text-align: center }
 }
 
 .hero p.intro {
-	font-family: 'Holtwood One SC', serif !important;
+	font-family: 'Secular One', sans-serif !important;
 	text-transform: uppercase !important;
 	letter-spacing: 1px !important;
 	font-size: 2.4em !important;
@@ -74,17 +74,27 @@ P { text-align: center }
 .round-title {
 	color: #ff2f2f;
 	font-size: 2em;
-	font-family: 'Holtwood One SC', serif;
+	font-family: 'Secular One', sans-serif;
 }
 
 .table-title {
 	color: #ff2f2f;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Secular One', sans-serif;
 	font-size: 16px;
 	text-transform: uppercase;
 	text-align: center;
 	height: 30px;
 	margin-bottom: 6px;
+}
+
+.table thead th {
+    font-family: 'Secular One', sans-serif;
+    font-weight: normal;
+}
+
+.table td, .table th {
+	font-family: 'Secular One', sans-serif;
+	font-weight: normal;
 }
 
 .cb-logo {
@@ -197,7 +207,7 @@ a:visited{
 }
 
 .round-details {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Secular One', sans-serif;
 	font-size: 16px;
 	color: #fff;
 	text-transform: uppercase;
@@ -206,7 +216,7 @@ a:visited{
 }
 
 .name-details {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'Secular One', sans-serif;
 	font-size: 13px;
 	color: #2C7399;
 	text-align: center;
@@ -571,5 +581,10 @@ table {
 	.round-details{
 		font-size: 16px;
 		margin-bottom: 0px;
+	}
+
+	/* overview */
+	.overview{
+		font-size: 0.8em;
 	}
 }
