--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -537,6 +537,10 @@ table {
 	.round-details{
     	font-size: 18px;
 	}
+
+	.info {
+		font-size: 16px;
+	}
 }
 
 @media screen and (max-width: 400px) {
@@ -597,5 +601,9 @@ table {
 	/* overview */
 	.overview{
 		font-size: 0.8em;
+	}
+
+	.info {
+		font-size: 14px;
 	}
 }
