--- a/tournaments/bestface.css
+++ b/tournaments/bestface.css
@@ -161,7 +161,8 @@ ul li a {
     display:inline-block;
     width:100%;
     text-decoration:none;
-    color: black;
+	color: black;
+	font-family: Montserrat;
 }
 
 a:visited{
@@ -207,12 +208,13 @@ a:visited{
 }
 
 .round-details {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: Montserrat;
 	font-size: 13px;
 	color: #2C7399;
 	text-transform: uppercase;
 	text-align: center;
 	height: 30px;
+	font-weight: bold;
 }
 
 .champion li,
