--- a/tournaments/latenightlegs.css
+++ b/tournaments/latenightlegs.css
@@ -206,27 +206,30 @@ a:visited{
 }
 
 .round-details {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: Montserrat;
 	font-size: 13px;
 	color: #2C7399;
 	text-transform: uppercase;
 	text-align: center;
 	height: 30px;
+	font-weight: bold;
 }
 
 .group-details {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: Montserrat;
 	font-size: 12px;
 	color: #2C7399;
 	text-transform: uppercase;
 	text-align: center;
+	font-weight: bold;
 }
 
 .name-details {
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: Montserrat;
 	font-size: 13px;
 	color: #2C7399;
 	text-align: center;
+	font-weight: bold;
 }
 
 .champion li,
