--- a/tournaments/wc2021.css
+++ b/tournaments/wc2021.css
@@ -115,6 +115,17 @@ P { text-align: center }
 	padding: 40px 0;
 }
 
+.score {
+	font-size: 12px;
+	text-transform: uppercase;
+	float: right;
+	background-color: #f0efef;
+	font-weight: bold;
+	font-family: 'Montserrat';
+	position: absolute;
+	right: 5px;
+}
+
 .split {
 	display: block;
 	float: left;
