--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,16 @@ button {
   border: 0;
   color: #fff;
   letter-spacing: 3px;
-  line-height: 88px;
+  line-height: 250%;
   outline: transparent;
   position: relative;
   font-weight: bold;
 }
+@media (max-width:768px) {
+  button {
+    font-size: 25px;
+  }
+} 
 
 .privacy {
   width: 55%; 
