group stage conclusion

--- a/tournaments/teambattles.css
+++ b/tournaments/teambattles.css
@@ -1002,7 +1002,7 @@ ul li a {
 .group-details {
 	font-family: Montserrat;
 	font-size: 12px;
-	color: #2c7399;
+	color: #000000;
 	text-transform: uppercase;
 	text-align: center;
 	font-weight: 700
